Fix the issue with the docs page on mobile

--- a/assets/styles/docs/doc-globals.less
+++ b/assets/styles/docs/doc-globals.less
@@ -413,12 +413,13 @@ div.docs-github-message {
   a {
     display: block;
     width: 70%;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px;
     font-size: 18px;
     background-color: @ltestGray;
     text-align: center;
-    margin-bottom: 25px;
+    margin-top: 25px;
     font-family: @headerFont;
     color: @darkTurquoise;
   }
